feat: add update product endpoint
