# backend/storage/api-docs/api-docs.json
@@ -128,6 +128,42 @@
                         "api_key": []
                     }
                 ]
+            },
+            "put": {
+                "tags": [
+                    "products"
+                ],
+                "summary": "update product",
+                "description": "This can only be done by the logged in user.",
+                "operationId": "updateProduct",
+                "parameters": [
+                    {
+                        "name": "productId",
+                        "in": "path",
+                        "description": "ID of product to return",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "format": "int64"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "description": "Update product object",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Product"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "default": {
+                        "description": "successful operation"
+                    }
+                }
             }
         },
         "/user": {
